# aicamp

./: .gitignore  basic_rag_realstate.ipynb  entry.py  extract_info.py  image_sets.json  load_climate_data.py  load_data.py  load_data_airbnb.py  pyproject.toml  rag_for_realestate.py  styles.css
app/: entry.py  main.py
data/: mock_images.py
data/curated/: sample-realtor-data-summary.json.py  top-1000-realtor-data.json
data/raw/: image_data.json  top-1000-realtor-data.csv
lib/: transform.py
practice/: load_climate_data.py
